<package format="2">
  <name>ati_force_torque</name>
  <version>1.0.0</version>
  <description>This package implements driver for ATI force torque sensors up to firmware 3.x. Char and Net CAN devices are supported through cob_generic_can package. The code if based on cob_forcetorque package.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl (KIT, IAR-IPR)</maintainer>
  <license>LGPLv3</license>

  <author>Denis Štogl</author>
  <author>Alexander Bubeck</author>

  <url type="website">http://ros.org/wiki/ati_force_torque</url>
  <url type="bugtracker">https://github.com/iirob/ati_force_torque/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
 
  <depend>cob_generic_can</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>iirob_filters</depend>
  <depend>rosparam_handler</depend>
  <depend>roslaunch</depend>
  <depend>rostopic</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>teleop_twist_joy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rosparam_handler</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>realtime_tools</depend>
  <depend>iirob_led</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
